# video-tool

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/: ffmpeg_render.py  inference_worker.py  main.py  schema.py  telemetry.py
backend/src/video_analysis_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: test_schema.py  test_telemetry.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/components/: EventTrack.tsx  MasterClock.tsx  SequenceBin.tsx  TelemetryChart.tsx  VideoPlayer.tsx
frontend/src/hooks/: useMasterClock.ts  useSidecar.ts  useTelemetry.ts
frontend/src/lib/: interpolate.ts  ipc.ts  slidingWindow.ts
frontend/src/stores/: clockStore.ts
frontend/src/types/: schema.ts
scripts/: generate-ts-types.js  generate_pydantic.py
shared/: schema.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ffmpeg.rs  mod.rs  project.rs  sidecar.rs
