[project]
name = "video-analysis-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "inference>=0.25.0",
    "pydantic>=2.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
